<resources>
    <string name="app_name" translatable="false">BookBuddy</string>
    <string name="title_activity_nav_drawer" translatable="false">NavDrawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="toggle_flash" translatable="false">Toggle Flash</string>
    <string name="scanned_data" translatable="false">Scanned Data</string>
    <string name="welcome_message">Welcome</string>
    <string name="profile_preferred_genre">Preferred Genre:</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="actual_book">Reading Book</string>
    <string name="DeleteAuthor">Author deleted</string>
    <string name="SB_AuthorHasBook">Author has books</string>
    <string name="SB_PickAuthor">Pick a Author first</string>
    <string name="SB_AuthorEdited">Author Edited</string>
    <string name="SB_AuthorDuplicated">Duplicated author</string>
    <string name="SB_NameEmpty">Name empty</string>
    <string name="SB_AuthorExists">Author already exist</string>
    <string name="SB_AuthorInserted">Author Inserted</string>
    <string name="BT_Cancel">Cancel</string>
    <string name="BT_Search">Search</string>
    <string name="SearchBook">Search book</string>
    <string name="SB_PickABook">Pick a Book first</string>
    <string name="DeleteBookQuestion">Do you want to delete this book?</string>
    <string name="DeleteBookQuestion2">"Are you sure you want to delete book with isbn = "</string>
    <string name="Yes">Yes</string>
    <string name="SB_BookDelete">Book deleted</string>
    <string name="BT_Insert">Insert</string>
    <string name="InsertAuthor">Insert Author</string>
    <string name="BT_Edit">Edit</string>
    <string name="EditAuthor">Edit Author</string>
    <string name="SearchAuthor">Search author</string>
    <string name="InsertGenre">Insert Genre</string>
    <string name="EditGenre">Edit Genre</string>
    <string name="SearchGenre">Search genre</string>
    <string name="GenreInserted">Genre Inserted</string>
    <string name="GenreExists">Genre already exist</string>
    <string name="GenreEdited">Genre Edited</string>
    <string name="GenreDuplicated">Duplicated genre</string>
    <string name="PickGenre">Pick a Genre first</string>
    <string name="GenreDelete">Genre deleted</string>
    <string name="GenreHasBook">Genre has books</string>
    <string name="SearchLibrary">Search library</string>
    <string name="PickLibrary">Pick a Library first</string>
    <string name="LibraryDelete">Library deleted</string>
    <string name="LibraryHasBook">Library has books</string>
    <string name="BookRequestInserted">Book Request Inserted</string>
    <string name="BookRequestExists">Book Request already exist</string>
    <string name="PickBookFirst">Pick a BookRequest first</string>
    <string name="DeleteRequest">Delete request</string>
    <string name="DeleteRequestQuestion">Are you sure you want to delete this request?</string>
    <string name="SB_BookRequestDeleted">BookRequest deleted</string>
    <string name="EditBook">Edit book</string>
    <string name="InsertBook">Insert book</string>
    <string name="ISBNEmptyWarning">Isbn cannot be empty</string>
    <string name="ISBNMaxLenght">Isbn minimum 13 characters</string>
    <string name="ISBNDuplicateWarning">Isbn cannot be duplicated</string>
    <string name="TitleEmptyWarning">Title cannot be empty</string>
    <string name="PagesEmptyWarning">Pages cannot be empty</string>
    <string name="PublishEmptyWarning">Publish date cannot be empty</string>
    <string name="BookAdded">Book added</string>
    <string name="BookEdited">Book edited</string>
    <string name="SB_DuplicateLibraryName">Duplicated library name</string>
    <string name="SB_GaleryNotAviable">Galery acces not available</string>
    <string name="SB_GaleryAccesRequired">Galery access is required to pick an image</string>
    <string name="EditLibrary">Edit library</string>
    <string name="InsertLibrary">Insert library</string>
    <string name="SB_CantEmptyName">Name cannot be empty</string>
    <string name="SB_EmptyZip">Zip cannot be empty</string>
    <string name="SB_ZipLenght">Zip of 5 characters</string>
    <string name="SB_Latitude">Latitude cannot be empty</string>
    <string name="SB_Longitude">Longitude cannot be empty</string>
    <string name="SB_LibraryEdited">Library Edited</string>
    <string name="TB_BookReferences">Book references</string>
    <string name="SB_CopiesEdited">Copies Edited</string>
    <string name="SB_NoNegatives">Cannot be negatives</string>
    <string name="SB_NotChanged">Not changed</string>
    <string name="SB_PickLibraryToEdit">Pick a library to edit</string>
    <string name="TB_WriteComment">Write Review</string>
    <string name="TB_BookDisplay">Book Display</string>
    <string name="SB_BookNotAviable">Book not available in any library</string>
    <string name="TB_LibraryList">Library list</string>
    <string name="SB_EnableGPS">Enable gps to unlock all the potential</string>
    <string name="SB_SelectLibrary">Select a library to go to</string>
    <string name="SB_LocationNeeded">Location needed to show closest libraries</string>
    <string name="MAP_Distance">Distance: </string>
    <string name="MAP_Time">"Time: "</string>
    <string name="MAP_Meters">" meters"</string>
    <string name="MAP_Minutes">" minutes"</string>
    <string name="DG_Preferences">Preferences</string>
    <string name="DG_Remember">Remember you can change your preferences in your profile</string>
    <string name="DG_Accept">Accept</string>
    <string name="Throw_ParentFragment" translatable="false">Parent fragment must implement OnSearchCompleteListener</string>
    <string name="TB_Profile">Profile</string>
    <string name="BT_Following">Following</string>
    <string name="BT_Follow">Follow</string>
    <string name="MSG_WantUnfollow">Do you want to unfollow</string>
    <string name="MSG_WantUnfollow2">You will stop receibing notifications from this user</string>
    <string name="BT_Unfollow">Unfollow</string>
    <string name="TB_Comments">REVIEWS</string>
    <string name="TB_Reads">READS</string>
    <string name="MSG_Added">Added </string>
    <string name="MSG_NewContacts"> new contacts!</string>
    <string name="MSG_NoContactsFound">No contacts found!</string>
    <string name="MSG_NoRecommendedBooks">No recommended books</string>
    <string name="SB_AddedBookPending">Added book for pending</string>
    <string name="SB_BookAlreadyRequested">Book already requested to add</string>
    <string name="SB_TryAgainScan">This is not a ISBN. Press again to Scan</string>
    <string name="SB_CammerAccessNedded">Camera access needed to scan codes</string>
    <string name="SB_NothingFound">Nothing found!</string>
    <string name="SB_AccountCreated">Acount created!</string>
    <string name="SB_AccountNotCreated">Acount not created!</string>
    <string name="SB_NoBlankFields">Can\'t be blank fields!</string>
    <string name="SB_UserConditions">You need to read and accept user conditions</string>
    <string name="SB_InvalidUserName">Invalid user name!</string>
    <string name="SB_PasswordNoMatch">Passwords need to be the same!</string>
    <string name="InvalidEmail">Invalid email!</string>
    <string name="SB_UserNameInUse">User name already in use!</string>
    <string name="SB_EmailUsed">Email already used!</string>
    <string name="MSG_TypeHere">Type here</string>
    <string name="MSG_RecoverPassword">Recover password</string>
    <string name="SB_EmailNotExist">Email not exist</string>
    <string name="SB_EmailNotCorrect">Email is not correct</string>
    <string name="SB_LogIn">Loging In</string>
    <string name="SB_IncorrectUserPass">Incorrect user or password</string>
    <string name="AppEmail" translatable="false">bookbuddyinfo2023@gmail.com</string>
    <string name="AppEmailCode" translatable="false">iqqvymaokpfdukci</string>
    <string name="MSG_PassRecovery">BookBuddy Password recovery</string>
    <string name="MSG_NewPass">New password: </string>
    <string name="MSG_NewPassWarning">. When u enter in the app change immediately the password in profile</string>
    <string name="SB_EmailSend">Email sended</string>
    <string name="SB_EmailSendError">Error sending email, try again</string>
    <string name="SB_PassError">Error password</string>
    <string name="LAY_CreateAcount">Create acount</string>
    <string name="LAY_Register">Register</string>
    <string name="LAY_HintUserName">User Name</string>
    <string name="LAY_HintEmail">Email</string>
    <string name="LAY_HintPassword">Password</string>
    <string name="LAY_HintPassword2">Repeat Password</string>
    <string name="LAY_ReadUserConditions">Read and accept user conditions</string>
    <string name="BT_Register">Register</string>
    <string name="LAY_AppName" translatable="false">BookBuddy</string>
    <string name="LAY_Login">Login</string>
    <string name="LAY_AutoLogin">Auto login</string>
    <string name="LAY_ForgotPassword">Forgot password?</string>
    <string name="LAY_LogIn">Log In</string>
    <string name="LAY_SignIn">Sign In</string>
    <string name="LAY_LogOut">Log Out</string>
    <string name="LAY_Progress">Progress</string>
    <string name="LAY_EnterEmail">Enter email</string>
    <string name="LAY_Id" translatable="false">Id:</string>
    <string name="LAY_Isbn" translatable="false">Isbn:</string>
    <string name="LAY_Title">Title:</string>
    <string name="LAY_Description">Description:</string>
    <string name="LAY_Pages">Pages:</string>
    <string name="LAY_PublishDate">Publish date:</string>
    <string name="LAY_Cover">Cover:</string>
    <string name="BT_References">References</string>
    <string name="BT_Accept">ACCEPT</string>
    <string name="LAY_Name">Name:</string>
    <string name="LAY_LibraryZip">Library ZipCode:</string>
    <string name="LAY_Latitude">Latitude:</string>
    <string name="LAY_Longitude">Longitude:</string>
    <string name="menu_search">Search</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_recomendations">Recommendations</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_admin_panel">Admin Panel</string>
</resources>