<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.navdrawer.adminnav.InsertLibraryDialog"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            android:titleTextColor="@color/white"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.BookBuddy.PopupOverlay"
            android:title="Mi Toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <TextView
                android:id="@+id/tv_id"
                android:text="@string/LAY_Id"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_green"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/et_id"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_id"
                app:layout_constraintStart_toEndOf="@id/tv_id"/>

            <TextView
                android:id="@+id/tv_name"
                android:text="@string/LAY_Name"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_green"
                android:layout_marginVertical="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_id"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_name"
                android:inputType="textPersonName"
                android:maxLength="26"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_name"
                app:layout_constraintBottom_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toEndOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_zip"
                android:text="@string/LAY_LibraryZip"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_green"
                android:layout_marginVertical="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_zip"
                android:maxLength="5"
                android:inputType="number"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_zip"
                app:layout_constraintBottom_toBottomOf="@id/tv_zip"
                app:layout_constraintStart_toEndOf="@id/tv_zip"/>

            <TextView
                android:id="@+id/tv_lat"
                android:text="@string/LAY_Latitude"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_green"
                android:layout_marginVertical="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_zip"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_lat"
                android:maxLength="22"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_lat"
                app:layout_constraintBottom_toBottomOf="@id/tv_lat"
                app:layout_constraintStart_toEndOf="@id/tv_lat"/>

            <TextView
                android:id="@+id/tv_lon"
                android:text="@string/LAY_Longitude"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_green"
                android:layout_marginVertical="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_lat"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_lon"
                android:maxLength="22"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_lon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_lon"
                app:layout_constraintStart_toEndOf="@id/tv_lon"/>

            <ImageButton
                android:id="@+id/btn_goto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_lon"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="10dp"
                android:src="@drawable/ic_goto"
                app:tint="@color/primary_green"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/btn_goto"
                app:layout_constraintBottom_toTopOf="@id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="30dp">
                <fragment
                    android:id="@+id/googlemap"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/BT_Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_accept"/>

            <Button
                android:id="@+id/btn_accept"
                android:text="@string/BT_Accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_green"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>